--- a/apps/manager/src/app/zone/zone-list/zone-list.component.html
+++ b/apps/manager/src/app/zone/zone-list/zone-list.component.html
@@ -1,9 +1,9 @@
 <div fxLayout="row" fxLayoutAlign="start center">
   <stf-input fxFlex="80%" (keyup)="applyFilter($event.target.value)" placeholder="Filter">Filter</stf-input>
   <div fxLayout="row" fxLayoutAlign="center center">
-    <stf-button fxFlex="20%" (click)="addNewZone()">
+    <pa-button fxFlex="20%" kind="primary" (click)="addNewZone()">
       Add
-    </stf-button>
+    </pa-button>
   </div>
 </div>
 
