--- a/libs/common/src/lib/user/login/login.component.html
+++ b/libs/common/src/lib/user/login/login.component.html
@@ -59,9 +59,8 @@
           <div class="login_submit"
                fxLayout="row"
                fxLayoutAlign="center center">
-            <stf-button type="submit"
-                        weight="bold"
-                        minWidth="128px">{{'login.login' | translate}}</stf-button>
+            <pa-button type="submit"
+                       kind="primary">{{'login.login' | translate}}</pa-button>
           </div>
         </form>
       </div>
