--- a/apps/manager/src/app/dealer/dealer-detail/dealer-detail.component.html
+++ b/apps/manager/src/app/dealer/dealer-detail/dealer-detail.component.html
@@ -2,7 +2,7 @@
 <div fxLayout="row" fxLayoutAlign="start start">
   <mat-card class="entity">
     <form [formGroup]="dealerForm">
-      <h2>Dealer</h2> 
+      <h2>Dealer</h2>
       <mat-form-field>
         <input matInput formControlName="id" placeholder="Id">
       </mat-form-field>
@@ -43,10 +43,10 @@
   <mat-card class="entity" *ngIf="addUsers">
     <form [formGroup]="userForm">
       <div>
-        <h3>Managers</h3> 
+        <h3>Managers</h3>
         <stf-input formControlName="user">user</stf-input>
         <stf-input formControlName="email">email</stf-input>
-        <stf-button icon="download" (click)="addUser()">Add User</stf-button>
+        <pa-button icon="download" (click)="addUser()">Add User</pa-button>
         <ul>
           <li *ngFor="let user of userList">
             <span>{{user}}</span>
@@ -59,5 +59,5 @@
   </mat-card>
 </div>
 <div class="save-button">
-  <stf-button (click)="save()">Save</stf-button>
+  <pa-button kind="primary" (click)="save()">Save</pa-button>
 </div>
