--- a/apps/manager/src/app/dealer/dealer-list/dealer-list.component.html
+++ b/apps/manager/src/app/dealer/dealer-list/dealer-list.component.html
@@ -1,9 +1,9 @@
 <div fxLayout="row" fxLayoutAlign="start center">
   <stf-input fxFlex="80%" (keyup)="applyFilter($event.target.value)" placeholder="Filter">Filter</stf-input>
   <div fxLayout="row" fxLayoutAlign="center center">
-    <stf-button fxFlex="20%" (click)="addNewDealer()">
+    <pa-button kind="primary" fxFlex="20%" (click)="addNewDealer()">
       Afegir
-    </stf-button>
+    </pa-button>
   </div>
 </div>
 <h4>{{message}}</h4>
