--- a/libs/common/src/lib/user/switch/switch.component.html
+++ b/libs/common/src/lib/user/switch/switch.component.html
@@ -21,7 +21,7 @@
       </div>
       <div fxLayout="row"
            fxLayoutAlign="center center">
-        <stf-button (click)="logout()">{{ 'user.logout' | translate }}</stf-button>
+        <pa-button (click)="logout()">{{ 'user.logout' | translate }}</pa-button>
       </div>
     </div>
   </div>
