--- a/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
@@ -6,14 +6,18 @@
   </pa-demo-description>
   <pa-demo-examples>
     <pa-chip-selectionable textColor="#1D00C2FF" borderColor="#1D00C2FF" backgroundColor="#C7BDFFFF"
-                           [selected]="selection === 1" (select)="onSelect(1)">Blue label
+                           [selected]="selection === 1"
+                           (select)="onSelect(1)">Blue label
     </pa-chip-selectionable>
-    <pa-chip-selectionable [selected]="selection === 2" (select)="onSelect(2)">Black label</pa-chip-selectionable>
+    <pa-chip-selectionable [selected]="selection === 2"
+                           (select)="onSelect(2)">Black label</pa-chip-selectionable>
     <pa-chip-selectionable textColor="#C7A900FF" borderColor="#C7A900FF" backgroundColor="#FFF8D1FF"
-                           [selected]="selection === 3" (select)="onSelect(3)">Yellow label
+                           [selected]="selection === 3"
+                           (select)="onSelect(3)">Yellow label
     </pa-chip-selectionable>
     <pa-chip-selectionable textColor="#0CAD55" borderColor="#0CAD55" backgroundColor="#DAF3E6"
-                           [selected]="selection === 4" (select)="onSelect(4)">Green label
+                           [selected]="selection === 4"
+                           (select)="onSelect(4)">Green label
     </pa-chip-selectionable>
 
     <ol style="margin: 32px 16px; padding: 0;">
@@ -22,4 +26,7 @@
       <li>Unselect them all by clicking on the current selection.</li>
     </ol>
   </pa-demo-examples>
+
+  <pa-demo-code>
+    <pre><code>{{code}}</code></pre></pa-demo-code>
 </pa-demo-page>
