--- a/apps/sistema-demo/src/styles.scss
+++ b/apps/sistema-demo/src/styles.scss
@@ -1,7 +1,7 @@
 @import '../../../libs/sistema/theme/fonts';
 @import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
 @import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/grid';
-
+@import 'libs/sistema/styles/apps-common';
 
 .form-field-config {
   .state-option {
