[sc-2118] replace all stf buttons (#197)
* Replace remaining STF-button from the dashboard

* Replace remaining STF-button in manager and common

* Delete image and toast components from old pastanaga

* Remove all imports of STF buttons

* Delete STF button components and modules

--- a/libs/common/src/lib/user/account/account.component.html
+++ b/libs/common/src/lib/user/account/account.component.html
@@ -18,7 +18,7 @@
               </div>
             </mat-expansion-panel-header>
             <div class="stash-list">
-              <a 
+              <a
                 href=""
                 class="stash-list-item"
                 fxLayout="flex"
@@ -34,9 +34,9 @@
       </div>
     </div>
     <div class="mt-36" fxFlex="0 0 auto" fxLayout="row" fxLayoutAlign="center center">
-      <stf-button color="basic" weight="semibold" padding="pd-l" (click)="logout()">
+      <pa-button kind="inverted" (click)="logout()">
         {{ 'user.logout' | translate }}
-      </stf-button>
+      </pa-button>
     </div>
   </div>
 </stf-user-container>
