--- a/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.scss
+++ b/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.scss
@@ -4,18 +4,23 @@
   display: flex;
   flex-direction: column;
   min-height: var(--setup-container-min-height);
-  padding: 60px 100px;
+  padding: rhythm(8) rhythm(12);
 
-  &-title {
-    margin: 36px 0 40px 0;
+  .setup-step1-title {
+    margin: rhythm(4) 0 rhythm(5) 0;
     font-size: var(--stf-font-size-title);
     font-weight: var(--stf-font-weight-bold);
     text-align: center;
   }
 
-  &-actions {
+  pa-input {
+    display: block;
+    margin-bottom: rhythm(2);
+  }
+
+  .setup-step1-actions {
     margin-top: auto;
-    padding-top: 25px;
+    padding-top: rhythm(3);
     text-align: center;
   }
 }
