--- a/apps/dashboard/src/app/widgets/edit/edit-widget.component.scss
+++ b/apps/dashboard/src/app/widgets/edit/edit-widget.component.scss
@@ -76,8 +76,7 @@ pre {
 }
 .tab-content {
   padding: rhythm(3);
-  .label,
-  stf-input {
+  .label {
     font-size: size(l);
     width: 50%;
     display: inline-block;
