--- a/apps/dashboard/src/app/setup/setup-invite/setup-invite.component.html
+++ b/apps/dashboard/src/app/setup/setup-invite/setup-invite.component.html
@@ -5,40 +5,22 @@
     </div>
     <h2 class="setup-invite-title">{{ 'setup.set_password' | translate }}</h2>
 
-    <form [formGroup]="passwordForm" (submit)="submit()" id="password-form">
-      <div class="mb-8">
-        <stf-input
-          formControlName="username"
-          [noAutocapitalize]="true"
-          type="text"
-          theme="border"
-          [validator]="passwordForm.controls['username']"
-          [validation_messages]="validationMessages.username"
-        >
-          {{ 'login.full_name' | translate }}
-        </stf-input>
-      </div>
-      <div class="mb-8">
-        <stf-input
-          type="password"
-          formControlName="password"
-          theme="border"
-          [validator]="passwordForm.controls['password']"
-          [validation_messages]="validationMessages.password"
-        >
-          {{ 'login.password' | translate }}
-        </stf-input>
-      </div>
-      <stf-input
-        type="password"
-        formControlName="passwordConfirm"
-        theme="border"
-        [validator]="passwordForm.controls['passwordConfirm']"
-        [validation_messages]="validationMessages.passwordConfirm"
-      >
+    <form [formGroup]="passwordForm" (submit)="submit()">
+      <pa-input formControlName="username"
+                [errorMessages]="validationMessages.username"
+                autocapitalize="off">
+        {{ 'login.full_name' | translate }}
+      </pa-input>
+      <pa-input formControlName="password"
+                type="password"
+                [errorMessages]="validationMessages.passowrd">
+        {{ 'login.password' | translate }}
+      </pa-input>
+      <pa-input formControlName="passwordConfirm"
+                type="password"
+                [errorMessages]="validationMessages.passwordConfirm">
         {{ 'generic.confirm_password' | translate }}
-      </stf-input>
-
+      </pa-input>
       <div class="setup-invite-actions">
         <pa-button type="submit">
           {{ 'generic.go!' | translate }}
