--- a/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.html
+++ b/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.html
@@ -6,26 +6,17 @@
 
     <form [formGroup]="passwordForm" (submit)="submit()" id="password-form">
       <div class="mb-8">
-        <stf-input
-          type="password"
-          formControlName="password"
-          theme="border"
-          [validator]="passwordForm.controls['password']"
-          [validation_messages]="validationMessages.password"
-        >
+        <pa-input type="password"
+                  formControlName="password"
+                  [errorMessages]="validationMessages.password">
           {{ 'login.password' | translate }}
-        </stf-input>
+        </pa-input>
       </div>
-      <stf-input
-        type="password"
-        formControlName="passwordConfirm"
-        theme="border"
-        [validator]="passwordForm.controls['passwordConfirm']"
-        [validation_messages]="validationMessages.passwordConfirm"
-      >
+      <pa-input type="password"
+                formControlName="passwordConfirm"
+                [errorMessages]="validationMessages.passwordConfirm">
         {{ 'generic.confirm_password' | translate }}
-      </stf-input>
-
+      </pa-input>
       <div class="setup-step1-actions">
         <pa-button type="submit">
           {{ 'generic.next_step' | translate }}
