--- a/apps/dashboard/src/app/upload/create-link/create-link.component.scss
+++ b/apps/dashboard/src/app/upload/create-link/create-link.component.scss
@@ -13,21 +13,16 @@ h1 {
   min-width: 350px;
   max-width: 672px;
   width: 50vw;
+}
 
-  stf-input {
-    display: block;
-    margin-bottom: rhythm(3);
-  }
+pa-input {
+  display: block;
+  margin-bottom: rhythm(3);
 }
 
 .link-input {
   min-width: 300px;
   width: 100%;
-}
-
-.message {
-  padding: rhythm(1) rhythm(1) 0 rhythm(1);
-  color: var(--stf-primary);
 }
 
 .link-actions {
