Fix password-input button alignment on error

--- a/libs/sistema/src/lib/password-input/password-input.component.scss
+++ b/libs/sistema/src/lib/password-input/password-input.component.scss
@@ -2,10 +2,13 @@
 
 
 .nsi-password-input {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   gap: rhythm(1);
 
+  pa-button {
+    margin-top: rhythm(0.25);
+  }
   pa-button ::ng-deep .pa-button:not(:disabled).pa-secondary.pa-basic {
     color: $color-text-field-label-regular;
   }
