--- a/libs/common/src/lib/user/login/login.component.scss
+++ b/libs/common/src/lib/user/login/login.component.scss
@@ -5,97 +5,92 @@
 }
 
 .login_field {
-  margin: 0 0 rhythm(1.5) 0;
+  margin-bottom: rhythm(2);
 
   &.username-field {
     width: calc(100% - #{rhythm(6)});
   }
 }
 
+.login_alert,
+.login_form_error {
+  background-color: $color-secondary-regular;
+  padding: rhythm(0.5) rhythm(1);
+}
+
 .login_alert {
   margin-top: rhythm(2);
-  font-size: var(--stf-font-size-title);
-  font-weight: var(--stf-font-weight-bold);
-  color: var(--stf-primary);
-  line-height: 1.2;
   text-align: center;
-  &.small {
-    font-size: font-size(l);
-  }
+}
+
+.login_form_error {
+  align-items: center;
+  display: flex;
+  gap: rhythm(1);
+  margin-top: rhythm(1.5);
+}
+
+.body-xs,
+.body-s {
+  font-weight: $font-weight-thin;
 }
 
 .login_policy {
-  color: $color-neutral-regular;
+  color: $color-neutral-strong;
   a {
     color: inherit;
   }
 }
 
-.login_form_error {
-  margin-top: rhythm(1.5);
-  font-size: var(--stf-font-size-ssmall);
-  line-height: 1.2;
-  color: #f91919;
-  &_icon {
-    display: flex;
-    width: 11px;
-    height: 11px;
-    align-items: center;
-    justify-content: center;
-    padding-left: 1px;
-    margin: 2px 6px 0 0;
-    font-size: 9px;
-    color: #fff;
-    background-color: #f91919;
-    border-radius: 50%;
-    user-select: none;
-    cursor: default;
-  }
+.login_submit {
+  margin-top: rhythm(3);
 }
 
-.login_submit {
-  margin: rhythm(3) 0 0 0;
+.login_recover,
+.login_signup {
+  text-align: center;
+  a {
+    text-decoration: none;
+  }
 }
 
 .login_recover {
   margin-top: rhythm(2);
-  text-align: center;
-  a {
-    text-decoration: none;
-  }
 }
 
 .login_signup {
   margin-top: rhythm(6);
-  text-align: center;
-  a {
-    text-decoration: none;
-  }
 }
 
 .login_social {
   margin-top: rhythm(3);
-  &_button {
-    @include reset-button();
-    width: 100%;
-    height: 50px;
+
+  .login_social_button {
+    -webkit-appearance: none;
+
+    background-color: $color-neutral-lightest;
+    border: none;
+    border-radius: $border-radius-default;
+    box-shadow: var(--stf-shadow-button) $color-neutral-light;
+    color: $color-dark-stronger;
     cursor: pointer;
-    background-color: var(--stf-input-background);
-    box-shadow: var(--stf-shadow-button) rgba(0, 0, 0, 0.16);
-    border-radius: var(--stf-border-radius-button);
-    transition: background-color 0.2s, color 0.2s;
-    color: #000;
+    height: rhythm(6);
+    margin: 0;
+    padding: 0;
+    transition: background-color $transition-hint, color $transition-hint;
+    width: 100%;
     &:hover {
-      background-color: #000;
-      color: #fff;
+      background-color: $color-dark-stronger;
+      color: $color-light-stronger;
     }
   }
+
 }
 
 .login_google {
   svg {
     display: block;
-    width: 19px;
+    width: rhythm(3);
     height: auto;
   }
 }
@@ -103,9 +98,8 @@
 .login_separator {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: rhythm(4);
   span {
-    font-size: var(--stf-font-size-ssmall);
     padding: 0 rhythm(2);
   }
   &::before,
@@ -113,6 +107,6 @@
     content: "";
     flex: 1 1 auto;
     height: 1px;
-    background-color: var(--stf-gray-lighter-2);
+    background-color: $color-neutral-regular;
   }
 }
